[gd_scene load_steps=72 format=3 uid="uid://dc7mr7kd5gc3c"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_imceo"]
[ext_resource type="Texture2D" uid="uid://ch8mtimser8bm" path="res://assets/Samurai/Attack_1.png" id="2_m0q7q"]
[ext_resource type="Texture2D" uid="uid://c5i0i1xwev0mh" path="res://assets/Samurai/Attack_2.png" id="3_s0ysc"]
[ext_resource type="Texture2D" uid="uid://d2ks22sxm73tk" path="res://assets/Samurai/Attack_3.png" id="4_srwu2"]
[ext_resource type="Texture2D" uid="uid://bjen6cqtmrwto" path="res://assets/Samurai/Hurt.png" id="5_p80aj"]
[ext_resource type="Texture2D" uid="uid://b6jqia423t7xj" path="res://assets/Samurai/Idle.png" id="6_dd7qu"]
[ext_resource type="Texture2D" uid="uid://pupr7cg5pu01" path="res://assets/Samurai/Jump.png" id="7_wphkr"]
[ext_resource type="Texture2D" uid="uid://bo0k8rxeqm8l3" path="res://assets/Samurai/Dead.png" id="8_tqrf3"]
[ext_resource type="Texture2D" uid="uid://dtc72ha66cfv7" path="res://assets/Samurai/Run.png" id="9_s2tj7"]
[ext_resource type="PackedScene" uid="uid://bfyjlkby1sw1l" path="res://scenes/healthbar.tscn" id="10_lq6qf"]
[ext_resource type="PackedScene" uid="uid://da1eorapronnl" path="res://scenes/boost_menu.tscn" id="11_u18uy"]
[ext_resource type="PackedScene" uid="uid://djq4tpvnsgpfi" path="res://scenes/score_info.tscn" id="12_yrtj1"]
[ext_resource type="Script" path="res://scenes/score_info.gd" id="13_xkisy"]
[ext_resource type="Texture2D" uid="uid://b1y6aldoay3la" path="res://assets/Dust_effect/dust1.png" id="14_ubvt2"]
[ext_resource type="Texture2D" uid="uid://d1lpycxyvqro5" path="res://assets/Dust_effect/dust2.png" id="15_xt35t"]
[ext_resource type="Texture2D" uid="uid://d0kpms22g6cin" path="res://assets/Dust_effect/dust3.png" id="16_xbtc8"]
[ext_resource type="Texture2D" uid="uid://w2ib1dn2m2nd" path="res://assets/Dust_effect/dust4.png" id="17_7hdl7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t5oih"]
atlas = ExtResource("2_m0q7q")
region = Rect2(22, 23, 119, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_igjmm"]
atlas = ExtResource("2_m0q7q")
region = Rect2(141, 23, 119, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_3045b"]
atlas = ExtResource("2_m0q7q")
region = Rect2(260, 23, 119, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqego"]
atlas = ExtResource("2_m0q7q")
region = Rect2(379, 23, 119, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0ufg"]
atlas = ExtResource("3_s0ysc")
region = Rect2(18, 23, 124, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy1am"]
atlas = ExtResource("3_s0ysc")
region = Rect2(142, 23, 124, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vql3"]
atlas = ExtResource("3_s0ysc")
region = Rect2(266, 23, 124, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_uucos"]
atlas = ExtResource("3_s0ysc")
region = Rect2(390, 23, 124, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfxfb"]
atlas = ExtResource("3_s0ysc")
region = Rect2(514, 23, 124, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_vn8fn"]
atlas = ExtResource("4_srwu2")
region = Rect2(19, 23, 117, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nnud"]
atlas = ExtResource("4_srwu2")
region = Rect2(136, 23, 117, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y26v"]
atlas = ExtResource("4_srwu2")
region = Rect2(253, 23, 117, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_bblxw"]
atlas = ExtResource("4_srwu2")
region = Rect2(370, 23, 117, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxhuf"]
atlas = ExtResource("8_tqrf3")
region = Rect2(30, 23, 65, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_daivx"]
atlas = ExtResource("8_tqrf3")
region = Rect2(160, 23, 65, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_kixvu"]
atlas = ExtResource("8_tqrf3")
region = Rect2(290, 23, 65, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7y6o"]
atlas = ExtResource("8_tqrf3")
region = Rect2(420, 23, 65, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj3du"]
atlas = ExtResource("8_tqrf3")
region = Rect2(550, 23, 65, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvq6a"]
atlas = ExtResource("8_tqrf3")
region = Rect2(680, 23, 65, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4mu0"]
atlas = ExtResource("5_p80aj")
region = Rect2(33, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_bamer"]
atlas = ExtResource("5_p80aj")
region = Rect2(161, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_ditp4"]
atlas = ExtResource("5_p80aj")
region = Rect2(289, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni25m"]
atlas = ExtResource("6_dd7qu")
region = Rect2(0, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl27x"]
atlas = ExtResource("6_dd7qu")
region = Rect2(128, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_2un6q"]
atlas = ExtResource("6_dd7qu")
region = Rect2(256, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_exu4m"]
atlas = ExtResource("6_dd7qu")
region = Rect2(384, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ilm3"]
atlas = ExtResource("6_dd7qu")
region = Rect2(512, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxxvv"]
atlas = ExtResource("6_dd7qu")
region = Rect2(640, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_icjrl"]
atlas = ExtResource("7_wphkr")
region = Rect2(31, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_52578"]
atlas = ExtResource("7_wphkr")
region = Rect2(159, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpni3"]
atlas = ExtResource("7_wphkr")
region = Rect2(287, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_kabll"]
atlas = ExtResource("7_wphkr")
region = Rect2(415, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk8ss"]
atlas = ExtResource("7_wphkr")
region = Rect2(543, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_8417e"]
atlas = ExtResource("7_wphkr")
region = Rect2(671, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fns2"]
atlas = ExtResource("7_wphkr")
region = Rect2(799, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs5v0"]
atlas = ExtResource("7_wphkr")
region = Rect2(927, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa6st"]
atlas = ExtResource("7_wphkr")
region = Rect2(1055, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2l3f"]
atlas = ExtResource("9_s2tj7")
region = Rect2(10, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bco7"]
atlas = ExtResource("9_s2tj7")
region = Rect2(138, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1u0m"]
atlas = ExtResource("9_s2tj7")
region = Rect2(266, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkgo1"]
atlas = ExtResource("9_s2tj7")
region = Rect2(394, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3fvf"]
atlas = ExtResource("9_s2tj7")
region = Rect2(522, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cy56"]
atlas = ExtResource("9_s2tj7")
region = Rect2(650, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_iluuw"]
atlas = ExtResource("9_s2tj7")
region = Rect2(778, 23, 64, 105)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqn16"]
atlas = ExtResource("9_s2tj7")
region = Rect2(906, 23, 64, 105)

[sub_resource type="SpriteFrames" id="SpriteFrames_ssqu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5oih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igjmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3045b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqego")
}],
"loop": false,
"name": &"attack 1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0ufg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy1am")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vql3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uucos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfxfb")
}],
"loop": false,
"name": &"attack 2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vn8fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nnud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y26v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bblxw")
}],
"loop": false,
"name": &"attack 3",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxhuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daivx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kixvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7y6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj3du")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvq6a")
}],
"loop": false,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4mu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bamer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ditp4")
}],
"loop": false,
"name": &"hurt",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni25m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl27x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2un6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exu4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ilm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxxvv")
}],
"loop": false,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icjrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52578")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpni3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kabll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk8ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8417e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fns2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs5v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa6st")
}],
"loop": false,
"name": &"jumping",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2l3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bco7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1u0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkgo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3fvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cy56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iluuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqn16")
}],
"loop": false,
"name": &"running",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b00wh"]
size = Vector2(31, 88.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xawss"]
size = Vector2(32, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ecdv"]
size = Vector2(36.8096, 9.92278)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kkvx5"]
size = Vector2(17.2047, 6.39668)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cr5gk"]
size = Vector2(32, 86.25)

[sub_resource type="Animation" id="Animation_f8hta"]
resource_name = "invincible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.270588), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j6yg0"]
_data = {
"invincible": SubResource("Animation_f8hta")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_1d3lb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_ubvt2")
}, {
"duration": 1.0,
"texture": ExtResource("15_xt35t")
}, {
"duration": 1.0,
"texture": ExtResource("16_xbtc8")
}, {
"duration": 1.0,
"texture": ExtResource("17_7hdl7")
}],
"loop": false,
"name": &"dust",
"speed": 12.0
}]

[node name="Player" type="CharacterBody2D"]
position = Vector2(648, 583)
collision_mask = 0
script = ExtResource("1_imceo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(2.28286e-05, -1.90735e-05)
scale = Vector2(1.055, 1.259)
sprite_frames = SubResource("SpriteFrames_ssqu6")
animation = &"idle"

[node name="worldCollision" type="CollisionShape2D" parent="."]
visible = false
light_mask = 0
position = Vector2(2.5, 22.125)
shape = SubResource("RectangleShape2D_b00wh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 3.8147e-06)
scale = Vector2(1e-05, 1e-05)
limit_left = -928
limit_right = 2945
limit_bottom = 650

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="Attack1Hitbox" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(45, -2.5)
shape = SubResource("RectangleShape2D_xawss")
disabled = true

[node name="Attack2Hitbox" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(38.838, 40.859)
rotation = 0.116937
shape = SubResource("RectangleShape2D_0ecdv")
disabled = true

[node name="Attack3Hitbox" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2(48.326, -15.762)
rotation = -0.940732
shape = SubResource("RectangleShape2D_kkvx5")
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 22.875)
shape = SubResource("RectangleShape2D_cr5gk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j6yg0")
}
speed_scale = 1.5

[node name="Healthbar" parent="." instance=ExtResource("10_lq6qf")]
offset_left = -43.0
offset_top = -42.0
offset_right = 46.0
offset_bottom = -32.0
metadata/_edit_use_anchors_ = true

[node name="BoostMenu" parent="." instance=ExtResource("11_u18uy")]
offset_left = 63.0
offset_top = -43.0
offset_right = 63.0
offset_bottom = -43.0
scale = Vector2(0.3, 0.3)

[node name="ScoreInfo" parent="." instance=ExtResource("12_yrtj1")]
offset_left = -436.0
offset_top = -469.0
offset_right = -403.0
offset_bottom = -469.0
script = ExtResource("13_xkisy")

[node name="Dust" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(1, 52)
scale = Vector2(3.625, 2.3125)
sprite_frames = SubResource("SpriteFrames_1d3lb")
animation = &"dust"
frame = 3
frame_progress = 1.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="Dust" to="." method="_on_dust_animation_finished"]
